--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
 
     <div id="container">
-        <img src="./public/images/image3.jpg" id="image">
+        <img src=".code_pill/public/images/image3.jpg" id="image">
         <canvas id="canvas" width="612" height="612"></canvas>
     </div>
 
