Update and rename webcam.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="./public/js/face-api.min.js"></script>
+    <script src="/code_pill/public/js/face-api.min.js"></script>
 
     <style>
         * {
@@ -34,7 +34,7 @@
         <canvas id="overlay">
     </div>
 
-    <script src="./public/js/script_webcam.js"></script>
+    <script src="/code_pill/public/js/script_webcam.js"></script>
 </body>
 
 </html>
